[package]
name = "manga-rs"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]

[dependencies]
gnip-twitter-stream = { path = "gnip-twitter-stream" }
serde_json = "1.0"
serde = "1.0"
chrono = "0.4"
edit-distance = "2.0"
flate2 = "1.0"
gnudbm = "0.1.3"

[dev-dependencies]
tempdir = "0.3.5"
