[package]
name = "anagram-hit-manager"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]

[dependencies]
manga-rs = { version = "*", path = "../" }
gnip-twitter-stream = { version = "0.1", path = "../gnip-twitter-stream" }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
chrono = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
